--- a/front-end/index.html
+++ b/front-end/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="icon" type="image" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaA9j50g1PQ6FyLv7JuAxlEGkvuLZEAtkfAg&s" />
     
     <title>THE BAGHUB</title>
